@startuml Bitacora_Cientifica

class Estudiante {
  + id : Integer <<PK>>
  + nombre : String
  + correo_institucional : String
  + grupo : Integer
}

class MedicionPlantas {
  + id : Integer <<PK>>
  + dia : Integer
  + altura : Decimal
  + fecha_registro : DateTime
  + estudiante_id : Integer <<FK>>
}

class RegistroFotografico {
  + id : Integer <<PK>>
  + imagen : String
  + fecha : DateTime
  + comentario : Text
  + estudiante_id : Integer <<FK>>
}

Estudiante "1" -- "0..*" MedicionPlantas
Estudiante "1" -- "0..*" RegistroFotografico

@enduml
